# AircraftGame

./: .gitignore  .travis.yml  README.md
src/: CMakeLists.txt  main.c
src/Apple/: SDLMain.m
src/Elements/: aircraft.c  aircraft.h  bonus.c  bonus.h  missile.c  missile.h
src/Game/: context.c  context.h  game.c  game.h  label.h  menu.c  position.c  position.h  sdl_wrapper.c  sdl_wrapper.h
src/Other/: log.c  log.h
